[package]
name = "oku_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

winit = { git = "https://github.com/rust-windowing/winit", rev = "babbb715c572503291dae5f4bf64665d4f36ec09" }
tiny-skia = "0.11.4"
softbuffer = "0.4.2"
cosmic-text = { git = "https://github.com/pop-os/cosmic-text", rev = "ff5501d9a36e51c50d908413caf7632d8f7533b7" }
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "066949d8b445eb19dbe76a4c5733038be4c30579" }
accesskit = "0.13.0"
#accesskit_winit = { version = "0.18.0" }

log = "0.4.21"

# https://crates.io/crates/glam
# SSE2 is enabled by default on x86_64 targets.
glam = { version = "0.27.0" }
env_logger = { version = "0.11.3" }
wgpu = { version = "0.19.4" }
bytemuck = { version = "1.15.0", features = ["derive"] }
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }

cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
] }
console_log = "1.0"
wgpu = { version = "0.19.3", features = ["webgpu"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
dynamic_linking = []
