[package]
name = "oku_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

winit = { git = "https://github.com/rust-windowing/winit", rev = "75ce71f05ad6b2fa73c2c529a1d2c8896aea3f0e" }
tiny-skia = { git = "https://github.com/RazrFalcon/tiny-skia", rev = "784569522f728cc70232cbb88abd7330571b51dd" }
softbuffer = { git = "https://github.com/rust-windowing/softbuffer", rev = "7c4af4b436163b2d5094c2be2f48f32ea4fee0d5" }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text", rev = "a03ec6b75f0ea8fd6264d6cd05afcec3c2213f8f" }
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "cd73db35cfa2b31555a796e7972cd97a45554e17" }
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "92c8cf415c6c0d6dc9a89f60e36c4dc0bcb5a4b5" }
accesskit = "0.16.0"
#accesskit_winit = { version = "0.18.0" }

log = "0.4.22"
dyn-clone = "1.0.17"

# https://crates.io/crates/glam
# SSE2 is enabled by default on x86_64 targets.
glam = { version = "0.28.0" }
env_logger = { version = "0.11.3" }
bytemuck = { version = "1.16.1", features = ["derive"] }
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }

cfg-if = "1.0.0"
once_cell = "1.19.0"
slotmap = "1.0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
] }
console_log = "1.0"
#wgpu = { version = "0.19.3", features = ["webgpu"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.38.0", features = ["full"] }

[features]
dynamic_linking = []
